Adding Gadgets API JavaScript, including inter-domain communication library (IFPC) to Shindig. Also, adding initial support for type=URL gadgets, along with several cleanups, tweaks, and bugfixes.
Details:

  * IFPC (Inter-frame procedure call) library, enabling container-to-gadget and gadget-to-container communication.
    * Library declared in the namespace "gadgets.*".
    * Backward compatibility maintained with iGoogle with the messaging protocol unchanged and an _IFPC alias defined in the global namespace.

  * Base gadgets core JS functionality
    * IO routines (eg. fetchContent APIs)
    * User pref and localization message handling
    * Backward-compatibility layer to ensure interoperability w/ existing gadgets.

  * Fixed incorrect dependency handling in GadgetFeatureRegistry.
    * Added support for loading all core JS from default locations (Configurability TBD)

  * Adding initial type=URL gadget support.
    * Works by constructing URL and redirecting to it.
    * UserPrefs special-cased as up_<foo> arguments for now; to be generalized soon.
    * Renamed BasicGadgetHttpServlet to GadgetRenderingServlet.
    * Augmented JsLibrary with registration mechanism to allow references to JavaScript
      libraries that implement various features by short name.
    * Added JsServlet for serving JavaScript files registered as above.
      + Includes support for loading _all_ libs at once with no changes by Gadget developers.
        Technique: libs=js/foo:bar:baz.js turned into <script src="gadget.com/gadgets/js/foo:bar:baz.js"/>,
        which in turn serves a single consolidated JS file from components foo.js, bar.js, baz.js,
        in order.

  * URL -> URI
    * Used throughout almost all of the code (except RemoteContentFetcher - TBD)

  * Cleanups and Tweaks
    * Registering AnalyticsFeature in its own class.
    * Returning SC_BAD_REQUEST in a few relevant places in the rendering servlet.
    * Cleaned up some MessageBundle naming-related issues by re